# chatserv

./: README.md  chatserv.cabal  client.js  index.html
src/: Client.hs  Server.hs
src/ChatServ/: Common.hs
