name:                chatserv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chatserv#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable chatclient-exe
  hs-source-dirs:      src
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , mtl
                     , network
                     , containers
                     , text
                     , websockets
  default-language:    Haskell2010

executable chatserv-exe
  hs-source-dirs:      src
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , containers
                     , warp
                     , wai
                     , text
                     , wai-websockets
                     , websockets
  default-language:    Haskell2010
